# fin-restructure-assistant

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
app/ai/: openai_client.py  report_generator.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  evaluation.py  health.py  report.py
app/core/: config.py  logging.py
app/models/: __init__.py  account.py  common.py  customer.py  decision.py  offer.py  report.py
app/schemas/: report_request.py  report_response.py  request.py  response.py
app/services/: __init__.py  data_loader.py  eligibility_engine.py  report_storage.py  scenario_builder.py
app/templates/: report.html
data/: bank_offers.json  cards.csv  credit_score_history.csv  customer_cashflow.csv  loans.csv  payments_history.csv
scripts/: deploy_containerapp.sh
tests/app/api/: test_api.py  test_report_api.py  test_scenario_builder.py
tests/app/services/: test_data_repository.py  test_eligibility_engine.py  test_offer_rules.py
